Do not focus any buttons in the relaunch required dialog.

To prevent users from accidentally restarting or dismissing the dialog
if they happen to be typing when it appears.

BUG=884831
R=bsep@chromium.org

Change-Id: I91c31bd5b122632a3a2ceb13214aac266dfc6020
Reviewed-on: https://chromium-review.googlesource.com/1233576
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Commit-Queue: Greg Thompson <grt@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592473}
Former-commit-id: bf8f4d1ca020c1ae88fb4489c76651b0dfa7573f